--- a/po/nl.po
+++ b/po/nl.po
@@ -6758,7 +6758,7 @@ msgstr ""
 
 #: setup/lib/messages.inc.php:134
 msgid "Changes tracking"
-msgstr ""
+msgstr "Wijzigingen bijhouden"
 
 #: setup/lib/messages.inc.php:135
 msgid "Customization"
