--- a/po/nl.po
+++ b/po/nl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-31 00:59+0200\n"
+"PO-Revision-Date: 2010-05-31 01:02+0200\n"
 "Last-Translator: Bjorn <inbox@bjornroesbeke.be>\n"
 "Language-Team: dutch <nl@li.org>\n"
 "Language: nl\n"
@@ -7537,7 +7537,7 @@ msgstr "SQL-commando om de beschikbare databases op te vragen"
 
 #: setup/lib/messages.inc.php:299
 msgid "SHOW DATABASES command"
-msgstr "SHOW DATABASES commando"
+msgstr "SHOW DATABASES opdracht"
 
 #: setup/lib/messages.inc.php:300
 msgid ""
