Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,8 +4,8 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 15:31+0200\n"
-"Last-Translator:  <dbc334@gmail.com>\n"
+"PO-Revision-Date: 2010-05-31 01:41+0200\n"
+"Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
 "MIME-Version: 1.0\n"
@@ -2578,6 +2578,8 @@ msgid ""
 "The size of a transaction log before rollover, and a new log is created. The "
 "default value is 16MB."
 msgstr ""
+"Velikost dnevnika transakcij pred prehodom in ustvarjanjem novega dnevnika. "
+"Privzeta vrednost je 16 MB."
 
 #: libraries/engines/pbxt.lib.php:43
 msgid "Transaction buffer size"
