--- a/po/sl.po
+++ b/po/sl.po
@@ -2607,7 +2607,7 @@ msgstr ""
 
 #: libraries/engines/pbxt.lib.php:53
 msgid "Data log threshold"
-msgstr ""
+msgstr "Omejitev podatkovnega dnevnika"
 
 #: libraries/engines/pbxt.lib.php:54
 msgid ""
