Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-31 01:45+0200\n"
+"PO-Revision-Date: 2010-05-31 01:47+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -2616,6 +2616,10 @@ msgid ""
 "value of this variable can be increased to increase the total amount of data "
 "that can be stored in the database."
 msgstr ""
+"Največja velikost podatkovnega dnevnika. Privzeta vrednost je 64 MB. PBXT "
+"lahko ustvari največ 32000 podatkovnih dnevnikov, katere uporabljajo vse "
+"tabele. Tako se lahko ta vrednost poveča za povečanje skupne količine "
+"podatkov, ki so lahko shranjeni v zbirki podatkov."
 
 #: libraries/engines/pbxt.lib.php:58
 msgid "Garbage threshold"
