Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-31 01:48+0200\n"
+"PO-Revision-Date: 2010-05-31 01:50+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -2641,6 +2641,9 @@ msgid ""
 "The engine allocates one buffer per thread, but only if the thread is "
 "required to write a data log."
 msgstr ""
+"Velikost medpomnilnika uporabljenega med pisanjem podatkovnega dnevnika. "
+"Privzeto je 256 MB. Pogon vsaki niti dodeli en medpomnilnik, vendar samo v "
+"primeru, če mora nit zapisovati v podatkovni dnevnik."
 
 #: libraries/engines/pbxt.lib.php:68
 msgid "Data file grow size"
