--- a/po/sl.po
+++ b/po/sl.po
@@ -2663,7 +2663,7 @@ msgstr ""
 
 #: libraries/engines/pbxt.lib.php:78
 msgid "Log file count"
-msgstr ""
+msgstr "Število dnevniških datotek"
 
 #: libraries/engines/pbxt.lib.php:79
 msgid ""
