Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-31 01:50+0200\n"
+"PO-Revision-Date: 2010-05-31 01:52+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -2672,6 +2672,10 @@ msgid ""
 "will be deleted, otherwise they are renamed and given the next highest "
 "number."
 msgstr ""
+"Število datotek transakcijskih dnevnikov (pbxt/system/xlog*.xt), ki jih "
+"vzdržuje sistem. Če število dnevnikov presega to vrednost, bodo stari "
+"dnevniki izbrani, v naprotnem primeru pa bodo preimenovani in dodeljena jim "
+"bo naslednja najvišja številka."
 
 #: libraries/export/codegen.php:37 setup/lib/messages.inc.php:88
 #: tbl_printview.php:376 tbl_structure.php:737
