Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-31 01:54+0200\n"
+"PO-Revision-Date: 2010-05-31 01:57+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -2555,6 +2555,10 @@ msgid ""
 "table data. The default value is 32MB. This memory is used to cache changes "
 "to the handle data (.xtd) and row pointer (.xtr) files."
 msgstr ""
+"Količina dodeljenega spomina zapisljivemu predpomnilniku, uporabljenemu za "
+"predpomnjenje podatkov tabele. Privzeta vrednost je 32 MB. Ta spomin se "
+"uporablja za predpomnjenje sprememb datotek oprimkov podatkov (.xtd) in "
+"kazalcev vrstic (.xtr)."
 
 #: libraries/engines/pbxt.lib.php:33
 msgid "Log cache size"
