--- a/po/sl.po
+++ b/po/sl.po
@@ -2281,10 +2281,9 @@ msgid "Relational key"
 msgstr "Relacijski ključ"
 
 #: libraries/display_tbl.lib.php:588
-#, fuzzy
 #| msgid "Relational display field"
 msgid "Relational display column"
-msgstr "Relacijsko prikazno polje"
+msgstr "Relacijski prikazni stolpec"
 
 #: libraries/display_tbl.lib.php:595
 msgid "Show binary contents"
