--- a/po/sl.po
+++ b/po/sl.po
@@ -2713,10 +2713,9 @@ msgstr "Stolpci zaključeni z"
 
 #: libraries/export/csv.php:22 libraries/import/csv.php:28
 #: libraries/import/csv.php:71 libraries/import/ldi.php:41
-#, fuzzy
 #| msgid "Fields enclosed by"
 msgid "Columns enclosed by"
-msgstr "Polja obdana z"
+msgstr "Stolpci obdani z"
 
 #: libraries/export/csv.php:23 libraries/import/csv.php:29
 #: libraries/import/csv.php:75 libraries/import/ldi.php:42
