Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -2737,10 +2737,9 @@ msgid "Replace NULL by"
 msgstr "Zamenjaj NULL z"
 
 #: libraries/export/csv.php:26 libraries/export/excel.php:23
-#, fuzzy
 #| msgid "Remove CRLF characters within fields"
 msgid "Remove CRLF characters within columns"
-msgstr "Odstrani znake CRLF znotraj polj"
+msgstr "Odstrani znake CRLF znotraj stolpcev"
 
 #: libraries/export/csv.php:27 libraries/export/excel.php:24
 #: libraries/export/htmlword.php:26 libraries/export/latex.php:57
