Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-06-01 00:44+0200\n"
+"PO-Revision-Date: 2010-06-01 00:45+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -4523,7 +4523,6 @@ msgid "Length/Values"
 msgstr "Dolžina/Vrednosti*"
 
 #: libraries/tbl_properties.inc.php:105
-#, fuzzy
 #| msgid ""
 #| "If field type is \"enum\" or \"set\", please enter the values using this "
 #| "format: 'a','b','c'...<br />If you ever need to put a backslash (\"\\\") "
@@ -4535,10 +4534,10 @@ msgid ""
 "a single quote (\"'\") amongst those values, precede it with a backslash "
 "(for example '\\\\xyz' or 'a\\'b')."
 msgstr ""
-"Če je polje vrste \"enum\" ali \"set\", navedite vrednosti v obliki: "
-"'a','b','c' ...<br />Če želite med vrednostmi uporabiti poševnico (\"\\\") "
-"ali enojni narekovaj (\"'\"), pred tem znakom vnesite poševnico (npr. '\\"
-"\\xyz' ali 'a\\'b')."
+"Če je stolpec vrste \"enum\" ali \"set\", navedite vrednosti v obliki: "
+"'a','b','c' ...<br />Če želite med vrednostmi uporabiti poševnico (\"\\\") ali "
+"enojni narekovaj (\"'\"), pred tem znakom vnesite poševnico (npr. '\\\\xyz' ali "
+"'a\\'b')."
 
 #: libraries/tbl_properties.inc.php:106
 msgid ""
