--- a/po/sl.po
+++ b/po/sl.po
@@ -4618,10 +4618,9 @@ msgid "Add %s column(s)"
 msgstr "Dodaj %s stolpcev"
 
 #: libraries/tbl_properties.inc.php:784 tbl_structure.php:536
-#, fuzzy
 #| msgid "You have to add at least one field."
 msgid "You have to add at least one column."
-msgstr "Dodati morate vsaj eno polje."
+msgstr "Dodati morate vsaj en stolpec."
 
 #: libraries/tbl_triggers.lib.php:29
 msgid "Event"
