Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-06-01 00:46+0200\n"
+"PO-Revision-Date: 2010-06-01 00:48+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -4627,7 +4627,6 @@ msgid "Event"
 msgstr "Dogodek"
 
 #: libraries/transformations/application_octetstream__download.inc.php:10
-#, fuzzy
 #| msgid ""
 #| "Displays a link to download the binary data of the field. You can use the "
 #| "first option to specify the filename, or use the second option as the "
@@ -4639,10 +4638,10 @@ msgid ""
 "of a column which contains the filename. If you use the second option, you "
 "need to set the first option to the empty string."
 msgstr ""
-"Prikaži povezavo za prenos dvojiških podatkov polja. Prva možnost je ime "
-"dvojiške datoteke. Druga možnost je možno ime polja v vrstici tabele, ki "
-"vsebuje to ime datoteke. Če vnesete drugo možnost, mora biti prva možnost "
-"prazna."
+"Prikaže povezavo za prenos dvojiških podatkov stolpca. Uporabite lahko prvo "
+"možnost za določitev imena datoteke ali uporabite drugo možnost kot ime "
+"stolpca, ki vsebuje ime datoteke. Če uporabite drugo možnost, mora biti prva "
+"možnost prazna."
 
 #: libraries/transformations/application_octetstream__hex.inc.php:10
 msgid ""
