Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-06-01 00:48+0200\n"
+"PO-Revision-Date: 2010-06-01 00:49+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -4693,7 +4693,6 @@ msgstr ""
 "funkcijo strftime() in za \"utc\" se uporablja funkcija gmdate()."
 
 #: libraries/transformations/text_plain__external.inc.php:10
-#, fuzzy
 #| msgid ""
 #| "LINUX ONLY: Launches an external application and feeds it the field data "
 #| "via standard input. Returns the standard output of the application. The "
@@ -4717,15 +4716,15 @@ msgid ""
 "will prevent wrapping and ensure that the output appears all on one line "
 "(Default 1)."
 msgstr ""
-"SAMO ZA LINUX: Zažene zunanjo aplikacijo in podaja podatke za fielddata "
-"preko standardnega vhoda. Vrne standardni izhod aplikacije. Privzeto je "
-"Tidy, za tiskanje HTML-kode. Zaradi varnostnih razlogov morate ročno urediti "
-"datoteko libraries/transformations/text_plain__external.inc.php in vstaviti "
-"orodja za zaganjanje. Prva možnost je številka programa, ki ga želite "
-"uporabiti, druga možnost pa so parametri za program. Če tretji parameter "
-"nastavite na 1, bo s pomočjo htmlspecialchars() pretvoril izhod (Privzeto "
-"1). Če nastavite četrti parameter na 1, bi preprečil prelamljanje in "
-"zagotovil, da se celotni izhod prikaže v eni vrstici (Privzeto 1)."
+"SAMO ZA LINUX: Zažene zunanjo aplikacijo in podaja podatke stopcev preko "
+"standardnega vhoda. Vrne standardni izhod aplikacije. Privzeto je Tidy, za "
+"tiskanje HTML-kode. Zaradi varnostnih razlogov morate ročno urediti datoteko "
+"libraries/transformations/text_plain__external.inc.php in vstaviti orodja "
+"za zaganjanje. Prva možnost je številka programa, ki ga želite uporabiti, "
+"druga možnost pa so parametri za program. Če tretji parameter nastavite na "
+"1, bo s pomočjo htmlspecialchars() pretvoril izhod (Privzeto 1). Če "
+"nastavite četrti parameter na 1, bi preprečil prelamljanje in zagotovil, da "
+"se celotni izhod prikaže v eni vrstici (Privzeto 1)."
 
 #: libraries/transformations/text_plain__formatted.inc.php:10
 #, fuzzy
