--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-06-01 00:49+0200\n"
+"PO-Revision-Date: 2010-06-01 00:50+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -4738,7 +4738,6 @@ msgstr ""
 "Zatorej se za polje predvideva, da vsebuje veljaven HTML."
 
 #: libraries/transformations/text_plain__imagelink.inc.php:10
-#, fuzzy
 #| msgid ""
 #| "Displays an image and a link; the field contains the filename. The first "
 #| "option is a URL prefix like \"http://www.example.com/\". The second and "
@@ -4748,8 +4747,8 @@ msgid ""
 "option is a URL prefix like \"http://www.example.com/\". The second and "
 "third options are the width and the height in pixels."
 msgstr ""
-"Prikaže sliko in povezavo; polje vsebuje ime datoteke. Prva možnost je "
-"predpona URL, kot je \"http://www.domena.com/\". Druga in tretja možnost sta "
+"Prikaže sliko in povezavo; stolpec vsebuje ime datoteke. Prva možnost je "
+"predpona URL, kot je \"http://www.example.com/\". Druga in tretja možnost sta "
 "širina in višina v slikovnih pikah."
 
 #: libraries/transformations/text_plain__link.inc.php:10
