--- a/po/sl.po
+++ b/po/sl.po
@@ -4752,7 +4752,6 @@ msgstr ""
 "širina in višina v slikovnih pikah."
 
 #: libraries/transformations/text_plain__link.inc.php:10
-#, fuzzy
 #| msgid ""
 #| "Displays a link; the field contains the filename. The first option is a "
 #| "URL prefix like \"http://www.example.com/\". The second option is a title "
@@ -4762,8 +4761,8 @@ msgid ""
 "prefix like \"http://www.example.com/\". The second option is a title for "
 "the link."
 msgstr ""
-"Prikaže povezavo; polje vsebuje ime datoteke. Prva možnost je predpona URL, "
-"kot je \"http://www.domena.com/\". Druga možnost je ime povezave."
+"Prikaže povezavo; stolpec vsebuje ime datoteke. Prva možnost je predpona "
+"URL, kot je \"http://www.example.com/\". Druga možnost je ime povezave."
 
 #: libraries/transformations/text_plain__longToIpv4.inc.php:10
 msgid ""
