--- a/po/sl.po
+++ b/po/sl.po
@@ -6245,10 +6245,9 @@ msgstr ""
 "[kbd]textarea[/kbd] – omogoča nove vrstice v stolpcu"
 
 #: setup/lib/messages.inc.php:36
-#, fuzzy
 #| msgid "CHAR fields editing"
 msgid "CHAR columns editing"
-msgstr "Urejanje polj CHAR"
+msgstr "Urejanje stolpcev CHAR"
 
 #: setup/lib/messages.inc.php:37
 msgid "Number of columns for CHAR/VARCHAR textareas"
