Translation update done using Pootle.

--- a/po/nb.po
+++ b/po/nb.po
@@ -547,10 +547,9 @@ msgid "Inside table(s):"
 msgstr "I tabell(ene):"
 
 #: db_search.php:355
-#, fuzzy
 #| msgid "Inside field:"
 msgid "Inside column:"
-msgstr "I felt:"
+msgstr "I kolonne:"
 
 #: db_structure.php:81 db_structure.php:82 db_structure.php:94
 #: db_structure.php:95 db_structure.php:107 db_structure.php:108
