--- a/po/nb.po
+++ b/po/nb.po
@@ -2688,10 +2688,9 @@ msgstr "CSV-data"
 
 #: libraries/export/csv.php:21 libraries/import/csv.php:27
 #: libraries/import/csv.php:59 libraries/import/ldi.php:40
-#, fuzzy
 #| msgid "Lines terminated by"
 msgid "Columns terminated by"
-msgstr "Linker avsluttet med"
+msgstr "Kolonner avsluttet med"
 
 #: libraries/export/csv.php:22 libraries/import/csv.php:28
 #: libraries/import/csv.php:71 libraries/import/ldi.php:41
