--- a/po/nb.po
+++ b/po/nb.po
@@ -2694,10 +2694,9 @@ msgstr "Kolonner avsluttet med"
 
 #: libraries/export/csv.php:22 libraries/import/csv.php:28
 #: libraries/import/csv.php:71 libraries/import/ldi.php:41
-#, fuzzy
 #| msgid "Fields enclosed by"
 msgid "Columns enclosed by"
-msgstr "Felter omsluttet av"
+msgstr "Kolonner omsluttet av"
 
 #: libraries/export/csv.php:23 libraries/import/csv.php:29
 #: libraries/import/csv.php:75 libraries/import/ldi.php:42
