--- a/po/nb.po
+++ b/po/nb.po
@@ -2727,10 +2727,9 @@ msgstr "Fjern CRLF tegn i kolonner"
 #: libraries/export/ods.php:24 libraries/export/odt.php:50
 #: libraries/export/texytext.php:34 libraries/export/xls.php:24
 #: libraries/export/xlsx.php:24
-#, fuzzy
 #| msgid "Put fields names in the first row"
 msgid "Put columns names in the first row"
-msgstr "Sett inn feltnavn i første rad"
+msgstr "Sett inn kolonnenavn i første rad"
 
 #: libraries/export/excel.php:18
 msgid "CSV for MS Excel"
