--- a/po/nb.po
+++ b/po/nb.po
@@ -4691,10 +4691,9 @@ msgid "Add %s column(s)"
 msgstr "Legg til %s kolonne(r)"
 
 #: libraries/tbl_properties.inc.php:784 tbl_structure.php:536
-#, fuzzy
 #| msgid "You have to add at least one field."
 msgid "You have to add at least one column."
-msgstr "Du må sette inn minst ett felt."
+msgstr "Du må sette inn minst en kolonne."
 
 #: libraries/tbl_triggers.lib.php:29
 msgid "Event"
